Fixed pop menu spacing.

--- a/htdocs/cgi-bin/wsrc/main.css
+++ b/htdocs/cgi-bin/wsrc/main.css
@@ -228,7 +228,7 @@ img {
     padding: 5px;
     text-align: center;
     background: #ccffff;
-    margin-left: 90%;
+    margin-left: 91%;
 }
 
 #frm_login {
