--- a/htdocs/cgi-bin/wsrc/main_earth.css
+++ b/htdocs/cgi-bin/wsrc/main_earth.css
@@ -215,7 +215,7 @@ img {
     padding: 5px;
     text-align: center;
     background: #c28a4a;
-    margin-left: 90%;
+    margin-left: 91%;
 }
 
 
