--- a/htdocs/cgi-bin/wsrc/main_sun.css
+++ b/htdocs/cgi-bin/wsrc/main_sun.css
@@ -227,7 +227,7 @@ img {
     padding: 5px;
     text-align: center;
     background: #D4AF37;
-    margin-left: 90%;
+    margin-left: 91%;
 }
 
 #frm_login {
